# prism-plugin

./: .easignore  .gitattributes  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTINUE-ALWAYS-ON-DAEMON.md  PRISM-CLI-DOCUMENTATION-2.1.md  PRISM-CLI-DOCUMENTATION.md  PRISM-STATE-2026-06-18.md  PRISM-TUI-DOCUMENTATION-2.1.md  README.md  package-lock.json  package.json
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
agents/: codebase-analyzer.md  codebase-pattern-finder.md  git-investigator.md  log-investigator.md  prism-locator.md  thoughts-analyzer.md  thoughts-locator.md  web-search-researcher.md
apps/prism-installer/src-tauri/: Cargo.toml  tauri.conf.json
apps/prism-installer/src-tauri/capabilities/: default.json
apps/prism-installer/src-tauri/src/: detect.rs  download.rs  install_cli.rs  install_extension.rs  install_plugin.rs  lib.rs  main.rs  uninstall.rs
commands/: cli-install.md  cli-setup.md  cli-uninstall.md  commit.md  create_handoff.md  decompose_plan.md  describe_pr.md  generate_prd.md  generate_pricing.md  generate_tech_spec.md  generate_user_flows.md  implement_plan.md  iterate_plan.md  prism-debug.md  prism-wiki.md  prism_tui.md  ralph_tui.md  research_codebase.md  resume_handoff.md  validate_plan.md  worktree.md
hooks/: hooks.json
prism-docs/: package-lock.json  package.json
ref/: PLAN.md  PROJECT_SUMMARY.md
scripts/: detect-changes-gate.sh  fable-gate.sh  pre-compact.py  pre-release-audit.mjs  prism-cli-install.ps1  prism-cli-install.sh  prism-inject-stats.py  prism-sync-skills.py  ralph.sh  (+8 more)
(+1236 files in other folders)
