[package]
name = "prism-installer"
version = "3.9.5"
description = "Prism installer — unified setup wizard for Windows and macOS"
authors = ["TheDigitalGriot <digitalgriotstudios@gmail.com>"]
edition = "2021"
license = "MIT"

[lib]
name = "prism_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-decorum = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }
futures-util = "0.3"
tauri-plugin-dialog = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
winapi = { version = "0.3", features = ["winuser", "fileapi", "minwindef"] }
